# compiled-stdlib

./: README.md  pyproject.toml
src/compiled_stdlib/: __init__.py
